--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,3 +8,9 @@
 @using Microsoft.JSInterop
 @using YohualkisTejada_AP1_P2
 @using YohualkisTejada_AP1_P2.Components
+
+@using YohualkisTejada_AP1_P2.Models
+@using YohualkisTejada_AP1_P2.Services
+@using BlazorBootstrap
+@using YohualkisTejada_AP1_P2.Components.Pages.ModelosPages.Picker
+@using System.Linq
