Final del examen

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,6 +2,9 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1><strong>Segundo Parcial Aplicada 1</strong></h1>
 
-Welcome to your new app.
+<ul>
+	<li><strong>Nombres:</strong> Yohualkis Tejada</li>
+	<li><strong>Matricula:</strong> 2022 - 0433</li>
+</ul>
