--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using BlazorBootstrap
 @using YohualkisTejada_AP1_P2.Services
 @using YohualkisTejada_AP1_P2.Models
+@using YohualkisTejada_AP1_P2.Components.Pages.ModelosPages.Picker
