--- a/Components/Pages/ModelosPages/Index.razor
+++ b/Components/Pages/ModelosPages/Index.razor
@@ -2,7 +2,7 @@
 @rendermode InteractiveServer
 
 @inject ToastService Toast
-@inject ModelosService modelosService
+@inject CombosService combosService
 
 <PageTitle>Index</PageTitle>
 <Toasts class="p-3" AutoHide="true" Delay="4000" Placement="ToastsPlacement.TopRight" />
@@ -10,7 +10,7 @@
 	<div class="card shadow-lg">
 		@*HEADER*@
 		<div class="card-header text-center">
-			<h5><strong>Registro de Modelos</strong></h5>
+			<h5><strong>Registro de Combo</strong></h5>
 
 			<div class="row">
 				@*Desde*@
@@ -36,7 +36,7 @@
 						<InputSelect class="form-select" @bind-Value="@valorFiltro">
 							<option value="" selected disabled>Selecciona...</option>
 							<option value="ID">ID</option>
-							<option value="Nombre">Nombre</option>
+							<option value="Descripcion">Decripci&oacute;n</option>
 							<option value="Fecha">Fecha</option>
 						</InputSelect>
 
@@ -69,26 +69,30 @@
 			<table class="table table-striped table-hover">
 				<thead>
 					<tr>
-						<th><strong>ModeloId</strong></th>
-						<th><strong>Nombre</strong></th>
-						<th><strong>Sueldo</strong></th>
-						<th><strong>Edit</strong></th>
+						<th><strong>ID</strong></th>
+						<th><strong>Descripci&oacute;n</strong></th>
+						<th><strong>Precio</strong></th>
+						<th><strong>Fecha</strong></th>
+						<th><strong>Vendido</strong></th>
+						<th><strong>Editar</strong></th>
 						<th><strong>Eliminar</strong></th>
 					</tr>
 				</thead>
 
 				<tbody>
-					@foreach (var modelo in ListaModelos)
+					@foreach (var modelo in ListaCombos)
 					{
 						<tr>
-							<th>@modelo.ModeloId</th>
-							<th>@modelo.Nombres</th>
-							<th>@modelo.Sueldo</th>
+							<th>@modelo.ComboId</th>
+							<th>@modelo.Descripcion</th>
+							<th>@modelo.Precio</th>
+							<th>@modelo.Fecha.ToShortDateString()</th>
+							<th><InputCheckbox class="form-check" @bind-Value="modelo.EstaVendido" @onclick="Vendido"></InputCheckbox></th>
 							<th>
-								<a href="/Edit/@modelo.ModeloId" class="btn btn-outline-primary bi bi-pencil-square"></a>
+								<a href="/Edit/@modelo.ComboId" class="btn btn-outline-primary bi bi-pencil-square"></a>
 							</th>
 							<th>
-								<a href="/Delete/@modelo.ModeloId" class="btn btn-outline-danger bi bi-trash"></a>
+								<a href="/Delete/@modelo.ComboId" class="btn btn-outline-danger bi bi-trash"></a>
 							</th>
 						</tr>
 					}
@@ -98,7 +102,7 @@
 
 		@*FOOTER*@
 		<div class="card-footer">
-			Cantidad total de Modelos: @ListaModelos.Count
+			Cantidad total de Modelos: @ListaCombos.Count
 		</div>
 	</div>
 </div>
@@ -106,8 +110,8 @@
 
 
 @code {
-	public Modelos Modelo { get; set; } = new Modelos();
-	public List<Modelos> ListaModelos { get; set; } = new List<Modelos>();
+	public Combos Modelo { get; set; } = new Combos();
+	public List<Combos> ListaCombos { get; set; } = new List<Combos>();
 	public string valorFiltro { get; set; } = "";
 	public string searchBarValue { get; set; } = string.Empty;
 	public DateTime? Desde { get; set; }
@@ -115,7 +119,7 @@
 
 	protected override async Task OnInitializedAsync()
 	{
-		ListaModelos = await modelosService.Listar(c => true);
+		ListaCombos = await combosService.Listar(c => true);
 	}
 
 	private async Task HandleKeyDown(KeyboardEventArgs e)
@@ -124,12 +128,17 @@
 			await Buscar();
 	}
 
+	public void Vendido()
+	{
+		Modelo.EstaVendido = true;
+	}
+
 	public async Task Buscar()
 	{
 		if(string.IsNullOrEmpty(valorFiltro))
 		{
 			Toast.Notify(new(ToastType.Warning, $"Debe seleccionar una opción en el fitro"));
-			ListaModelos = await modelosService.Listar(lt => true);
+			ListaCombos = await combosService.Listar(lt => true);
 			return;
 		}
 
@@ -150,26 +159,31 @@
 					return;
 				}
 				if (int.TryParse(searchBarValue, out int id))
-					ListaModelos = await modelosService.Listar(lt => lt.ModeloId == id);
+					ListaCombos = await combosService.Listar(lt => lt.ComboId == id);
 				break;
 
-			case "Nombre":
+			case "Descripcion":
 				if (string.IsNullOrEmpty(searchBarValue))
 				{
-					Toast.Notify(new(ToastType.Warning, $"Debe proveer un nombre para buscar"));
+					Toast.Notify(new(ToastType.Warning, $"Debe proveer una descripción para buscar"));
 					return;
 				}
-				ListaModelos = await modelosService.Listar(lt => lt.Nombres.Trim().ToLower()
+				ListaCombos = await combosService.Listar(lt => lt.Descripcion.Trim().ToLower()
 															.Contains(searchBarValue));
 				break;
 
 			case "Fecha":
 				if (Desde == null || Hasta == null)
 				{
-					Toast.Notify(new(ToastType.Warning, $"Debe seleccionar fechas en ambos campos"));
+					Toast.Notify(new(ToastType.Info, $"Debe seleccionar fechas en ambos campos"));
 					return;
 				}
-				ListaModelos = await modelosService.Listar(f => f.Fecha >= Desde && f.Fecha <= Hasta);
+				if (Desde > Hasta)
+				{
+					Toast.Notify(new(ToastType.Warning, $"La fecha incial no puede ser mayor a la final"));
+					return;
+				}
+				ListaCombos = await combosService.Listar(f => f.Fecha >= Desde && f.Fecha <= Hasta);
 				break;
 		}
 		return;
@@ -177,7 +191,7 @@
 
 	private async Task Restablecer()
 	{
-		ListaModelos = await modelosService.Listar(t => true);
+		ListaCombos = await combosService.Listar(t => true);
 		valorFiltro = string.Empty;
 		searchBarValue = string.Empty;
 		Desde = null;
